welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: reassignment to val
    if(getCouleurSol = Color.green)
                     ^